<?xml version="1.0"?>
<package format="2">
  <name>cv_wrapper</name>
  <version>0.1.0</version>
  <description>The cv_wrapper package</description>

  <maintainer email="lukscasanova@gmail.com">Lucas Casanova Nogueira</maintainer>

  <license>BSD</license>

  <build_depend>cv_optimizer</build_depend>
  <build_depend>homography_optimizer</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>vtec_core</build_depend>
  <exec_depend>cv_optimizer</exec_depend>
  <exec_depend>homography_optimizer</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>vtec_core</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
