<?xml version="1.0"?>
<package format="2">
  <name>vtec_msgs</name>
  <version>0.1.0</version>
  <description>The vtec_msgs package</description>

  <maintainer email="lukscasanova@gmail.com">Lucas Casanova Nogueira</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
