<?xml version="1.0"?>
<package>
  <name>vtec_ros</name>
  <version>0.1.0</version>
  <description>
    The vtec_ros metapackage that installs VisioTec packages
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lukcasanova@gmail.com">Lucas Nogueira</maintainer>

  <author email="lukcasanova@gmail.com">Lucas Nogueira</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/vtec_ros</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>vtec_tracker</run_depend>
  <run_depend>vtec_msgs</run_depend>
  <run_depend>cv_wrapper</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <metapackage/>

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
